--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,20 @@
-
-.clock {
-    font-size: 2em;
-    margin-bottom: 20px;
-}
-.stopwatch {
-    font-size: 2em;
-    margin: 20px 0;
+.clock, .stopwatch {
+    font-size: 3em;
+    margin: 30px 0;
 }
 button {
-    font-size: 1em;
-    margin: 5px;
-    padding: 10px 20px;
+    font-size: 1.2em;
+    margin: 10px;
+    padding: 12px 24px;
     cursor: pointer;
+}
+table {
+    margin: 20px auto;
+    border-collapse: collapse;
+    width: 50%;
+}
+th, td {
+    border: 1px solid black;
+    padding: 12px;
+    text-align: center;
 }
