--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,17 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="/assets/images/favicon.ico">
 <title>{{ page.title }}</title>
+<meta name="description" content="{{ page.description | default: site.description }}">
+{% seo %}
  <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  
 <!-- Custom Styles -->
 <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 </head>
 <body>
     {% include header.html %}
 
-    <main class="container mt-4">
+    <main class="container mt-1">
         {{ content }}
     </main>
 
