--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,4 @@
-.clock, {
-    font-size: 1em;
-    margin: 30px 0;
-}
-
-.stopwatch {
-    font-size: 3.5em;
-    margin: 30px 0;
-    color: blueviolet;
-}
-button {
-    font-size: 1.2em;
-    margin: 10px;
-    padding: 12px 24px;
-    cursor: pointer;
+.display {
+color: blueviolet;
+    font-size: 3em;
 }
